# qtbar

./: copyAssets.sh  pyproject.toml
src/hyprbar/: __init__.py  appswitch.py  bar.py  cli.py  config.py  constants.py  hyprland.py  showtrayItens.py  snicheck.py  tray.py  trayiconmanager.py  traywatcher.py  util.py  widgets.py  window.py
src/hyprbar/assets/: config.yaml  notes.txt  styles.css
src/qtbar/: __init__.py  cli.py  config.py  constants.py  util.py
src/qtbar/assets/: config.yaml
